# qa-model

./: .gitignore  INSPECTOR.md  README.md  pyproject.toml
configs/: config.yaml
configs/inference/: default.yaml
configs/lora/: default.yaml
configs/mlflow/: default.yaml
configs/model/: llama3_8b.yaml  mistral_7b.yaml
configs/rag/: default.yaml
configs/training/: mcq.yaml  saq.yaml
docs/: logprob_scoring.md
notebooks/: base_3models.ipynb  base_model.ipynb  inspect_model_params.ipynb  rag_demo.ipynb  rate_models.ipynb  single_question_2_models.ipynb
report/: abstract.tex  conclusion_future_work.tex  discussion_limitations.tex  experiments_iterative_improvements.tex  implementation.tex  introduction.tex  main.tex  references.bib  results.tex  seminar-report.tex  system_overview.tex
report/agents/: AGENTS.md  RECOMPILE_REPORT.md  TEMPLATE_REFACTOR.md
report/drafts/: experiments.md  important_to_mention.md
results/codex/: mcq_codex_submission.tsv  mcq_gpt-5.2_answers_key.tsv  mcq_gpt-5.2_submission.tsv  saq_gpt-5.2_prediction.tsv
results/llama_3_8b/: mcq_submission__meta_llama__meta_llama_3_8b.tsv  saq_submission__meta_llama__meta_llama_3_8b.tsv
results/llama_3_8b_instruct/: codex_high_validated_mcq_llama_3_8b_instruct.tsv  mcq_prediction.tsv  saq_prediction.tsv
results/mistral_7b_instruct/: codex_high_validated_mcq_mistral_7b_instruct.tsv  mcq_submission__mistralai__mistral_7b_instruct_v0.2.tsv  (+1 more)
scripts/: build_rag_index.py  infer.py  precompute_rag_contexts.py  prepare_wiki_corpus.py  rag_demo.py  single_question_2_models.py  train.py
(+16 files in other folders)
