[project]
name = "qa-model"
version = "0.1.0"
description = ""
authors = [
    {name = "OutlyingWest",email = "alexeybuv7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "transformers (<4.57)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "accelerate (>=1.12.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (<7)",
    "jupyter (>=1.1.1,<2.0.0)"
]
