[project]
name = "qa-model"
version = "0.1.0"
description = ""
authors = [
    {name = "OutlyingWest",email = "alexeybuv7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "transformers (<4.57)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "peft (>=0.15.0)",
    "datasets (>=3.5.0)",
    "hydra-core (>=1.3.0)",
    "omegaconf (>=2.3.0)",
    "trl (>=0.18.0)",
    "mlflow (>=2.15.0)",
    "evaluate (>=0.4.0)",
    "rouge-score (>=0.1.2)",
    "sacrebleu (>=2.4.0)",
    "rank-bm25 (>=0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (<7)",
    "jupyter (>=1.1.1,<2.0.0)"
]
